[gd_scene load_steps=2 format=3 uid="uid://cq8y7m3xh4vkl"]

[ext_resource type="Script" path="res://scripts/ui/error_panel.gd" id="1_error_panel"]

[node name="ErrorPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 200)
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_error_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ErrorCount" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "0 Errors"

[node name="Separator" type="Control" parent="VBox/Header"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="WarningCount" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "0 Warnings"

[node name="ErrorTree" type="Tree" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 4
column_titles_visible = true
hide_root = true
